--- a/src/index.html
+++ b/src/index.html
@@ -230,9 +230,9 @@
     </div>
     </div>
    
-    <div class="relative flex lg:w-[68%] md:w-[83%] w-[83%] m-auto lg:mt-64 mt-52 ">
+    <div class="relative flex lg:w-[67.5%] md:w-[83%] w-[83%] m-auto lg:mt-64 mt-[230px] ">
         <div class="leading-none">
-            <h2 class="font-Outfit lg:text-[112px] md:text-[80px] text-[64px] leading-tight md:leading-none  font-medium text-white">Award Winning</h2>
+            <h2 class="font-Outfit lg:text-[111px] md:text-[80px] text-[64px] leading-tight md:leading-none  font-medium text-white">Award Winning</h2>
             <h2 class="stroke-text font-Outfit lg:text-[112px] md:text-[80px] text-[64px] leading-tight md:leading-none font-medium text-white  md:mt-4 lg:mt-[23px]">Digital Agency</h2>
             <div class="font-OpenSans text-base text-white md:flex gap-10 md:mt-14 mt-2 items-center">
                 <div class="md:w-[47%] w-full lg:w-[51%] md:mt-[-9px] mt-[-3px]  lg:leading-none ">
@@ -335,8 +335,8 @@
             <div class="swiper-wrapper">
               <div class="swiper-slide">
                 <div class="">
-                  <div class="ease-in-out delay-150 relative  ">
-                    <div class="overflow-hidden w-full h-full rounded-2xl">
+                  <div class="ease-in-out delay-150 relative">
+                    <div class="overflow-hidden w-full h-full rounded-2xl group">
                       <img class="group-hover:scale-110 duration-300 ease-in-out w-full h-full   " src="./img/portfolio-6.jpg" alt="">
                     </div>
                     <div class="text-white relative flex gap-2 items-center pt-6">
@@ -360,7 +360,7 @@
               <div class="swiper-slide">
                 <div class="">
                   <div class="ease-in-out delay-150 relative ">
-                    <div class="overflow-hidden w-full h-full rounded-2xl">
+                    <div class="overflow-hidden w-full h-full rounded-2xl group">
                       <img class="group-hover:scale-110 duration-300 ease-in-out w-full h-full   " src="./img/portfolio-4.jpg" alt="">
                     </div>
                     <div class="text-white relative flex gap-2 items-center pt-6">
@@ -384,7 +384,7 @@
               <div class="swiper-slide">
                 <div class="">
                   <div class="ease-in-out delay-150 relative ">
-                    <div class="overflow-hidden w-full h-full rounded-2xl">
+                    <div class="overflow-hidden w-full h-full rounded-2xl group">
                       <img class="group-hover:scale-110 duration-300 ease-in-out w-full h-full   " src="./img/portfolio-5.jpg" alt="">
                     </div>
                     <div class="text-white relative flex gap-2 items-center pt-6">
@@ -408,7 +408,7 @@
               <div class="swiper-slide">
                 <div class="">
                   <div class="ease-in-out delay-150 relative">
-                    <div class="overflow-hidden w-full h-full rounded-2xl">
+                    <div class="overflow-hidden w-full h-full rounded-2xl group">
                       <img class="group-hover:scale-110 duration-300 ease-in-out w-full h-full   " src="./img/portfolio-1.jpg" alt="">
                     </div>
                     <div class="text-white relative flex gap-2 items-center pt-6">
@@ -772,7 +772,7 @@
           <p class="hidden lg:block">elit. Quo sit facilis cum nisi magnam</p>
         </div>
       </div>
-      <div class="md:flex text-white lg:pt-20 pt-4 mr-10  gap-40">
+      <div class="md:flex text-white lg:pt-20 pt-4 mr-10  gap-32">
           <div class="">
             <p class="font-Outfit text-[14.4px]">EMAIL</p>
             <h2 class="font-Outfit md:text-[28px] text-[22.95px]">contact@example.com</h2>
@@ -858,7 +858,7 @@
         },
         1024: {
           slidesPerView: 3,
-          spaceBetween: 20,
+          spaceBetween: 50,
         },
      
       },
